[gd_scene load_steps=7 format=3 uid="uid://cl56ji7y065le"]

[ext_resource type="StyleBox" uid="uid://bwk4agsvcealp" path="res://Themes/TraitStyleboxes/SizeTrait2.tres" id="1_4asi6"]
[ext_resource type="Script" path="res://Database/FilterButton.gd" id="2_02ct0"]
[ext_resource type="FontFile" uid="uid://ddoaaon50emb5" path="res://Fonts/GOTHIC.TTF" id="3_20ihv"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qv5ad"]
load_path = "res://.godot/imported/FilterIcons.png-2290632db7663188baa3d7507a5ac123.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_s16nu"]
atlas = SubResource("CompressedTexture2D_qv5ad")
region = Rect2(0, 0, 64, 64)
margin = Rect2(0, 8, 0, 15)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48a8l"]

[node name="FilterButton" type="PanelContainer"]
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_4asi6")
script = ExtResource("2_02ct0")
trait_name = "Fortitude"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TraitText" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_20ihv")
theme_override_font_sizes/font_size = 24
text = "Fortitude"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToggleTexture" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_s16nu")
expand_mode = 3

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_48a8l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_48a8l")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_48a8l")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_48a8l")
theme_override_styles/focus = SubResource("StyleBoxEmpty_48a8l")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
